--- a/banquetBuddy/core/templates/core/aboutus.html
+++ b/banquetBuddy/core/templates/core/aboutus.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron text-center" style="background-color: #02483E; color: #fff;">
     <h1 class="display-4">Bienvenido a BanquetBuddy</h1>
-    <p class="lead">Tu plataforma para la gestión y búsqueda de trabajos en catering.</p>
+    <p class="lead">Tu plataforma para la gestión y búsqueda de trabajos en catering</p>
 </div>
 
 <!-- Contenido principal -->
