--- a/banquetBuddy/core/templates/core/actual_privacy_policy.html
+++ b/banquetBuddy/core/templates/core/actual_privacy_policy.html
@@ -120,7 +120,7 @@
             
             <!-- Referencia a políticas anteriores -->
             <div class="text-center mt-4">
-                <p>Para ver versiones anteriores de nuestra Política de Privacidad, por favor visite nuestro <a href="{% url 'previous_policies' %}">archivo de políticas</a>.</p>
+                <p>Para ver versiones anteriores de nuestra Política de Privacidad, por favor visite nuestro <a href="{% url 'previous_policies' %}" style="color: #54bfaf; font-weight: bold;">archivo de políticas</a>.</p>
             </div>
         </div>
     </div>
