--- a/banquetBuddy/core/templates/core/actual_terms_and_conditions.html
+++ b/banquetBuddy/core/templates/core/actual_terms_and_conditions.html
@@ -34,7 +34,7 @@
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">5. Política de Privacidad</h2>
-            <p>Para información detallada sobre el tratamiento de sus datos personales, incluyendo cómo respondemos a las violaciones de datos, por favor refiérase a nuestra <a href="{% url 'privacy_policy' %}">Política de Privacidad</a>.</p>
+            <p>Para información detallada sobre el tratamiento de sus datos personales, incluyendo cómo respondemos a las violaciones de datos, por favor refiérase a nuestra <a href="{% url 'privacy_policy' %}" style="color: #54bfaf; font-weight: bold;">Política de Privacidad</a>.</p>
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">6. Limitaciones de Responsabilidad</h2>
@@ -68,7 +68,7 @@
 
             <!-- Referencia a términos anteriores -->
             <div class="text-center mt-4">
-                <p>Para consultar versiones anteriores de nuestros Términos y Condiciones, acceda a nuestro <a href="{% url 'previous_terms' %}">archivo de términos</a>.</p>
+                <p>Para consultar versiones anteriores de nuestros Términos y Condiciones, acceda a nuestro <a href="{% url 'previous_terms' %}" style="color: #54bfaf; font-weight: bold;">archivo de términos</a>.</p>
 
         </div>
     </div>
