--- a/banquetBuddy/core/templates/core/elegir_registro.html
+++ b/banquetBuddy/core/templates/core/elegir_registro.html
@@ -12,11 +12,10 @@
     body, html {
         height: 100%;
         margin: 0;
-        font-family: Arial, sans-serif;
     }
 
     .register-form {
-        background-color: #54bfaf;
+        background-color: #54BFAF;
         padding: 20px;
         border-radius: 35px;
         text-align: center;
@@ -46,6 +45,11 @@
         cursor: pointer;
         width: 100%;
         border-radius: 10px;
+    }
+    
+    .btn:hover {
+        background-color: #01352e;
+        color: white;
     }
 
     /* Ajuste de margen superior para el primer párrafo dentro de .register-form */
