--- a/banquetBuddy/core/templates/core/faq.html
+++ b/banquetBuddy/core/templates/core/faq.html
@@ -3,18 +3,7 @@
 
 {% block content %}
 
-<!DOCTYPE html>
-<html lang="es">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Preguntas Frecuentes</title>
 <style>
-  body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-  }
   .faq-container {
     max-width: 1200px;
     margin: 0 auto;
@@ -37,8 +26,6 @@
     display: block;
   }
 </style>
-</head>
-<body>
 
     <div class="jumbotron text-center" style="background-color: #02483E; color: #fff;">
         <h1 class="display-4">FAQ</h1>
@@ -83,7 +70,7 @@
 
         El horario de atención al cliente es de lunes a viernes de 09.00h a 14.00h.
         
-        Debido a la alta demanda de consultas, te atenderemos en un plazo de 24-48h.
+        En periodos de alta demanda de consultas, te atenderemos en un plazo de 24-48h.
     </div>
   </div>
  
@@ -111,9 +98,5 @@
     });
   });
 </script>
-
-</body>
-</html>
-
 
 {% endblock %}
