--- a/banquetBuddy/core/templates/core/previous_terms.html
+++ b/banquetBuddy/core/templates/core/previous_terms.html
@@ -1,9 +1,10 @@
 {% extends 'core/base.html' %}
 {% block content %}
 <div class="container">
-    <h1>Archivo de Terminos y condiciones</h1>
+    <h2 style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+        Archivo de Términos y Condiciones</h2>
     <ul>
-        <li><a href="{% url 'terms_version1_0' %}"> Versión 1.0 - Vigente 26/03/2024 - 08/04/2024 </a></li>
+        <li><a href="{% url 'terms_version1_0' %}" style="color: #54bfaf; font-weight: bold;"> Versión 1.0 - Vigente 26/03/2024 - 08/04/2024 </a></li>
     </ul>
 </div>
 {% endblock %}
