--- a/banquetBuddy/core/templates/core/profile.html
+++ b/banquetBuddy/core/templates/core/profile.html
@@ -110,7 +110,7 @@
       {% if catering_company %}
       <div class="row justify-content-center">
         <a href="{% url 'catering_profile_edit' %}" class="text-decoration-none">
-          <button class="btn btn-rounded text-white" style="background-color: #54bfaf">
+          <button class="btn btn-custom-blue">
             Edit profile
           </button>
         </a>
@@ -118,7 +118,7 @@
       {% else %}
       <div class="row justify-content-center">
         <a href="{% url 'profile_edit' %}" class="text-decoration-none mr-2">
-          <button class="btn btn-rounded text-white" style="background-color: #54bfaf;">
+          <button class="btn btn-custom-blue">
             Edit profile
           </button>
         </a>
