--- a/banquetBuddy/core/templates/core/profile_edit.html
+++ b/banquetBuddy/core/templates/core/profile_edit.html
@@ -83,7 +83,7 @@
             {% endif %}
           
             <div class="text-center mt-3">
-              <button type="submit" class="btn btn-primary" style="background-color: #54bfaf">Guardar cambios</button>
+              <button type="submit" class="btn btn-custom-blue">Guardar cambios</button>
             </div>
           </form>
         </div>
