--- a/banquetBuddy/core/templates/core/registro_empleado.html
+++ b/banquetBuddy/core/templates/core/registro_empleado.html
@@ -5,11 +5,10 @@
   html {
     height: 100%;
     margin: 0;
-    font-family: Arial, sans-serif;
   }
 
   .register-form {
-    background-color: #54bfaf;
+    background-color: #54BFAF;
     padding: 20px;
     height: 100%;
     width: 100%;
@@ -34,13 +33,19 @@
   }
 
   .btn {
-    background-color: #02483e;
+    background-color: #02483E;
     color: white;
     border: none;
     cursor: pointer;
     width: 30%;
     border-radius: 10px;
   }
+
+  .btn:hover {
+    background-color: #01352e;
+    color: white;
+  }
+  
   .alert.alert-danger {
     font-size: 12px; /* Tamaño de la fuente más pequeño */
   }
