--- a/banquetBuddy/catering_owners/templates/calendar.html
+++ b/banquetBuddy/catering_owners/templates/calendar.html
@@ -10,11 +10,9 @@
     <title>Catering Calendar</title>
     <style>
         body {
-            font-family:  Verdana, Geneva, Tahoma, sans-serif;
-            background-color: #f9f9f9;
-            color: #013b2a;
+            color: #02483E;
         }
-        h1{
+        h2{
             font-size: 35px;
         }
         .calendar-container {
@@ -57,7 +55,7 @@
             display: block;
         }
         .calendar-table a:hover {
-            background-color: #013b2a;
+            background-color: #01352e;
         }
         .calendar-container .navigation {
             display: flex;
@@ -74,7 +72,7 @@
         }
 
         .calendar-container .navigation a:hover {
-            background-color: #041611; /* Cambia el color de fondo al pasar el ratón por encima */
+            background-color: #01352e; /* Cambia el color de fondo al pasar el ratón por encima */
         }
         .calendar-container .info {
             margin-top: 20px;
@@ -128,7 +126,8 @@
 </head>
 
 <body>
-    <h1 style="text-align: center; margin-bottom: 30px; margin-top: 30px;">Events on {{ month_name }}/{{ year }} for {{ catering_name }}</h1>
+    <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+        Events on {{ month_name }}/{{ year }} for {{ catering_name }}</h2>
     <div class="calendar-container">
         <div class="navigation">
             <a href="{% url 'prev_month' catering_service_id=catering_service_id year=year month=month %}">Previous Month</a>
@@ -161,7 +160,7 @@
             {% endfor %}
         </table>
         <div class="info">
-            <p>Next Event: {{ next_event_date }}</p>
+            <p>Next event: {{ next_event_date }}</p>
             <p>Number of events this month: {{ num_events }}</p>
         </div>
     </div>
