--- a/banquetBuddy/catering_owners/templates/catering_calendar_home.html
+++ b/banquetBuddy/catering_owners/templates/catering_calendar_home.html
@@ -2,22 +2,8 @@
 {% load static %}
 
 {% block content %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Select Catering Service</title>
 
     <style>
-        body {
-            font-family:  Verdana, Geneva, Tahoma, sans-serif;
-            
-            margin: 0;
-            padding: 0;
-            background-color: #f9f9f9;
-            color: #013b2a;
-        }
         h1{
         text-align: center;
         font-size: 35px;
@@ -50,7 +36,7 @@
             cursor: pointer;
         }
         .form-container button:hover {
-            background-color: #013b2a;
+            background-color: #01352e;
         }
         @media screen and (max-width: 450px) {
             h1 {
@@ -63,7 +49,6 @@
             }
         }
     </style>
-</head>
 
 <body>
     <div class="form-container">
@@ -75,5 +60,4 @@
         </form>
     </div>
 </body>
-</html>
 {% endblock %}
