--- a/banquetBuddy/catering_particular/templates/catering_review.html
+++ b/banquetBuddy/catering_particular/templates/catering_review.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="container mt-4">
-    <h1>New Review for: {{ catering.name }}</h1>
+    <h1 class="card-title">New Review for {{ catering.name }}</h1>
 
     <form method="post" action="{% url 'add_review' catering.id %}">
         {% csrf_token %}
@@ -32,7 +32,7 @@
             </span></p>
         </div>
 
-        <button type="submit" class="btn btn-primary">Confirm Review</button>
+        <button type="submit" class="btn btn-custom">Confirm Review</button>
     </form>
 </div>
 
