--- a/banquetBuddy/catering_particular/templates/contact_chat.html
+++ b/banquetBuddy/catering_particular/templates/contact_chat.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 <div class="container mt-4">
-  <h1 class="mb-4 text-center">Chats</h1>
-  <hr />
+  <h2 class="mb-4 text-center" style="color: #02483E; margin-bottom: 30px; margin-top: 30px; font-weight: bold; text-shadow: 1px 1px 2px rgba(0,0,0,0.3);">
+    Chats</h2>
   {% if is_particular %}
 
     <div class="row">
@@ -11,9 +11,9 @@
       <div class="col-md-6">
         <div class="card mb-4">
           <div class="card-body">
-            <h5 class="card-title">{{ catering.name }}</h5>
+            <h4 class="card-title">{{ catering.name }}</h4>
             <p class="card-text">Phone number: {{ catering.phone_number }}</p>
-            <a href="{% url 'chat' catering.user.id %}" class="btn btn-primary">Chat</a>
+            <a href="{% url 'chat' catering.user.id %}" class="btn btn-custom">Chat</a>
           </div>
         </div>
       </div>
