--- a/banquetBuddy/core/templates/core/base.html
+++ b/banquetBuddy/core/templates/core/base.html
@@ -3,48 +3,67 @@
 
 <style>
     .bell i {
-    position: relative; 
-    right: 1cm; 
-}
-    .notifications_not_read{
-    position: relative; 
-    right: 1cm; 
+        position: relative;
+        right: 0.5cm;
+        color: #54BFAF;
+    }
+
+    .bell i:hover {
+        color: #3f8c7f;
+    }
+
+    .notifications_not_read {
+        position: relative;
+        right: 0.5cm;
     }
 
     header {
         background-color: white;
     }
 
+    .name a {
+        color: #54BFAF;
+    }
+
+    .name a:hover {
+        color: #3f8c7f;
+    }
 </style>
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-vyQ7N3S2F+Dd2jhN07XSyZ6R1ZSeznM57XjLSeV/DtBrJrE8c3H0RFuytWI3jGX5UJi+g8PXTPX/gqThXx1PEw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-vyQ7N3S2F+Dd2jhN07XSyZ6R1ZSeznM57XjLSeV/DtBrJrE8c3H0RFuytWI3jGX5UJi+g8PXTPX/gqThXx1PEw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 <html lang="en">
-<head> 
+
+<head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BanquetBuddy</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"/>
-    <link rel="stylesheet" href="{% static 'core/styles.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
     <link rel="shortcut icon" type="image/png" href="{% static 'core/images/Logo-sin-nombre.png' %}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Acme&display=swap">
 </head>
 
 <body>
     <header>
         <nav class="navbar navbar-expand-lg navbar-light" id="main-navbar">
             <a class="navbar-brand" href="/">
-                <img src="{% static 'core/images/Logo-sin-nombre.png' %}" width="70" height="auto" alt="Logo" loading="lazy">
+                <img src="{% static 'core/images/Logo-sin-nombre.png' %}" width="70" height="auto" alt="Logo"
+                    loading="lazy">
             </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     {% if request.user.is_authenticated and request.user.ParticularUsername %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="/caterings">Caterings</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/caterings">Caterings</a>
+                    </li>
                     {% endif %}
 
                     {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
@@ -64,9 +83,9 @@
                     {% endif %}
 
                     {% if request.user.is_authenticated and request.user.ParticularUsername %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'catering_contratados' %}">My bookings</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'catering_contratados' %}">My bookings</a>
+                    </li>
                     {% endif %}
                     {% if request.user.is_authenticated and request.user.ParticularUsername %}
                     <li class="nav-item">
@@ -77,7 +96,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'listar_caterings_particular' %}">Chats</a>
                     </li>
-                {% endif %}
+                    {% endif %}
                     {% if request.user.is_authenticated and request.user.CateringCompanyusername %}
                     <li class="nav-item">
                         <a class="nav-link" href={% url 'offer_list' %}>Offers</a>
@@ -96,45 +115,52 @@
                     {% endif %}
                 </ul>
                 {% if user.is_authenticated %}
-                    <div class="bell">
+                <div class="bell">
                     <a href="{% url 'notifications' %}">
                         <i class="fas fa-bell"></i>
                         <span class="notifications_not_read">{{ notification_number }}</span>
                     </a>
-                    </div>
-                    <form class="form-inline my-2 my-lg-0">
-                        <a href="{% url 'logout' %}" class="btn btn-outline-danger my-2 my-sm-0">Log out</a>
-                    </form>
+                </div>
+                <form class="form-inline my-2 my-lg-0">
+                    <a href="{% url 'logout' %}" class="btn btn-outline-danger my-2 my-sm-0">Log out</a>
+                </form>
                 {% endif %}
                 <form class="form-inline my-2 my-lg-0" style="position: relative;">
                     <button class="btn btn-outline-success my-2 my-sm-0" type="button" id="search-icon">
                         <i class="fas fa-search"></i>
                     </button>
-                    <input class="form-control mr-sm-2 search-bar" type="search" placeholder="Search" aria-label="Search" id="search-input">
+                    <input class="form-control mr-sm-2 search-bar" type="search" placeholder="Search"
+                        aria-label="Search" id="search-input">
                 </form>
                 {% if request.user.is_authenticated %}
-                    {% if request.user.ParticularUsername %}
-                        {% comment %} <a class="nav-link" href="{% url 'my_books' %}">My Books</a> {% endcomment %}
-                        <a href="{% url 'profile' %}" class="text-decoration-none">
+                {% if request.user.ParticularUsername %}
+                {% comment %} <a class="nav-link" href="{% url 'my_books' %}">My Books</a> {% endcomment %}
+                <div class="name">
+                    <a href="{% url 'profile' %}" class="text-decoration-none">
                         <i class="fas fa-user"></i>
                         {{ user.username }}
-                        </a>
-                    {% endif %}
-                    {% if request.user.EmployeeUsername %}
-                        <a href="{% url 'profile' %}" class="text-decoration-none">
+                    </a>
+                </div>
+                {% endif %}
+                {% if request.user.EmployeeUsername %}
+                <div class="name">
+                    <a href="{% url 'profile' %}" class="text-decoration-none">
                         <i class="fa-solid fa-user-tie"></i>
                         {{ user.username }}
-                        </a>
-                    {% endif %}
-                    {% if request.user.CateringCompanyusername %}
-                        <a href="{% url 'profile' %}" class="text-decoration-none">
+                    </a>
+                </div>
+                {% endif %}
+                {% if request.user.CateringCompanyusername %}
+                <div class="name">
+                    <a href="{% url 'profile' %}" class="text-decoration-none">
                         <i class="fa-solid fa-utensils"></i>
                         {{ user.username }}
-                        </a>
-                    {% endif %}
+                    </a>
+                </div>
+                {% endif %}
                 {% endif %}
             </div>
-            
+
         </nav>
         {% block extra_css %}{% endblock %}
     </header>
@@ -158,7 +184,7 @@
                         <p class="text-white text-lg">Report Error</p>
                         <i class="fas fa-exclamation icon-lg"></i>
                     </a>
-                </div> 
+                </div>
                 <div class="col about-us-container text-center">
                     <a href="/about-us" class="text-decoration-none">
                         <p class="text-white text-lg">About Us</p>
@@ -166,38 +192,39 @@
                     </a>
                 </div>
                 <div class="col faq-container text-center">
-                    <a href="/faq" target="_blank" class="text-decoration-none">
+                    <a href="/faq" class="text-decoration-none">
                         <p class="text-white text-lg">FAQ</p>
                         <i class="fas fa-question icon-lg"></i>
                     </a>
                 </div>
 
-                            <!-- Columna para Política de Privacidad -->
-            <div class="col text-center">
-                <a href="{% url 'privacy_policy' %}" class="text-decoration-none">
-                    <p class="text-white text-lg">Privacy</p>
-                    <i class="fas fa-lock icon-lg"></i>
-                </a>
-            </div>
+                <!-- Columna para Política de Privacidad -->
+                <div class="col text-center">
+                    <a href="{% url 'privacy_policy' %}" class="text-decoration-none">
+                        <p class="text-white text-lg">Privacy</p>
+                        <i class="fas fa-lock icon-lg"></i>
+                    </a>
+                </div>
 
-            <!-- Columna para Términos y Condiciones -->
-            <div class="col text-center">
-                <a href="{% url 'terms_and_conditions' %}" class="text-decoration-none">
-                    <p class="text-white text-lg">Terms</p>
-                    <i class="fas fa-file-contract icon-lg"></i>
-                </a>
-            </div>
+                <!-- Columna para Términos y Condiciones -->
+                <div class="col text-center">
+                    <a href="{% url 'terms_and_conditions' %}" class="text-decoration-none">
+                        <p class="text-white text-lg">Terms</p>
+                        <i class="fas fa-file-contract icon-lg"></i>
+                    </a>
+                </div>
 
 
                 <div class="col social-medias-container text-center">
-                    <a href="https://www.instagram.com/banquetbuddy_oficial/" target="_blank" class="text-decoration-none">
+                    <a href="https://www.instagram.com/banquetbuddy_oficial/" target="_blank"
+                        class="text-decoration-none">
                         <p class="text-white text-lg">Instagram</p>
                         <i class="fab fa-instagram icon-lg"></i>
                     </a>
                 </div>
                 <div class="col social-medias-container text-center">
                     <a href="https://www.facebook.com/profile.php?id=61557219530468" target="_blank"
-                    class="text-decoration-none">
+                        class="text-decoration-none">
                         <p class="text-white text-lg">Facebook</p>
                         <i class="fab fa-facebook-f icon-lg"></i>
                     </a>
@@ -211,11 +238,12 @@
             </div>
         </div>
     </footer>
-    
-    
+
+
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="{% static 'core/scripts.js' %}"></script>
 </body>
+
 </html>
