--- a/banquetBuddy/core/templates/core/login.html
+++ b/banquetBuddy/core/templates/core/login.html
@@ -13,11 +13,10 @@
     body, html {
         height: 100%;
         margin: 0;
-        font-family: Arial, sans-serif;
     }
 
     .login-form {
-        background-color: #54bfaf;
+        background-color: #54BFAF;
         padding: 20px;
         height: 100%;
         width: 100%;
@@ -50,7 +49,7 @@
     }
 
     .btn:hover {
-        background-color: #035D48;
+        background-color: #01352e;
     }
 
     .forgot-password {
