--- a/banquetBuddy/core/templates/core/politicas y terminos anteriores/termsv1.0.html
+++ b/banquetBuddy/core/templates/core/politicas y terminos anteriores/termsv1.0.html
@@ -33,7 +33,7 @@
 
             <hr style="background-color: #54bfaf;">
             <h2 style="color: #54bfaf;">5. Política de Privacidad</h2>
-            <p>La recopilación y uso de la información personal en BanquetBuddy están regidos por nuestra <a href="{% url 'privacy_policy' %}">Política de Privacidad</a>.</p>
+            <p>La recopilación y uso de la información personal en BanquetBuddy están regidos por nuestra <a href="{% url 'privacy_policy' %}" style="color: #54bfaf; font-weight: bold;">Política de Privacidad</a>.</p>
             <hr style="background-color: #54bfaf;">
 
             <h2 style="color: #54bfaf;">6. Limitaciones de Responsabilidad</h2>
