--- a/banquetBuddy/core/templates/core/reset_password.html
+++ b/banquetBuddy/core/templates/core/reset_password.html
@@ -11,7 +11,6 @@
     body, html {
         height: 100%;
         margin: 0;
-        font-family: Arial, sans-serif;
     }
 
     .login-form-container {
@@ -56,7 +55,7 @@
     }
 
     .btn:hover {
-        background-color: #035D48;
+        background-color: #01352e;
     }
 </style>
 <body>
