--- a/banquetBuddy/core/templates/core/reset_password_confirm.html
+++ b/banquetBuddy/core/templates/core/reset_password_confirm.html
@@ -12,7 +12,6 @@
     body, html {
         height: 100%;
         margin: 0;
-        font-family: Arial, sans-serif;
     }
 
     .reset-password-container {
@@ -52,6 +51,10 @@
         border-radius: 8px;
         padding: 10px 20px;
         font-size: 18px;
+    }
+
+    .btn:hover {
+        background-color: #01352e;
     }
 </style>
 <body>
